[package]
name = "oxc"
edition = "2024"

[lib]
path = "oxc.rs"
crate-type = ["staticlib", "cdylib"]

[dependencies]
oxc_allocator = "0.107.0"
oxc_parser = "0.107.0"
oxc_span = "0.107.0"
oxc_codegen = "0.107.0"
oxc_transformer = "0.107.0"
oxc_semantic = "0.107.0"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
opt-level = "z"
strip = true
