[package]
name = "oxc"
edition = "2024"

[lib]
crate-type = ["staticlib"]

[dependencies]
oxc_allocator = "0.110.0"
oxc_ast = "0.110.0"
oxc_span = "0.110.0"
oxc_transformer = "0.110.0"
oxc_semantic = "0.110.0"
oxc_codegen = { version = "0.110.0", default-features = false }
oxc_parser = { version = "0.110.0", default-features = false }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
opt-level = "z"
strip = true
